hphp/test/zend/good/Zend/tests/clone_003.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: b' in %s/clone_003.php:3
Stack trace:
%A
